--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "wepack-cli": "^0.0.1-security"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.11",
+    "apollo-boost": "^0.4.9",
+    "graphql": "^15.5.3",
+    "intersection-observer": "^0.12.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
